[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm[toml]~=7.1.0",
    "setuptools~=67.6.0",
    "wheel~=0.40.0",
]

[project]
dynamic = ["dependencies", "optional-dependencies", "version"]
name = "contextstore"
readme = "README.md"
requires-python = ">=3.9"

[tool.black]
line_length = 120

[tool.flake8]
count = true
doctests = true
max-line-length = 120
per-file-ignores = [
    "tests/**.py:S101",
]

[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov --durations=0 -n auto"
mock_use_standalone_module = true
testpaths = [
    "src",
    "tests",
]

[tool.setuptools.dynamic.dependencies]
file = ["requirements/production.in"]

[tool.setuptools.dynamic.optional-dependencies]
bootstrap = {file = ["requirements/bootstrap.in"]}
deployment = {file = ["requirements/deployment.in"]}
development = {file = ["requirements/development.in"]}

[tool.setuptools.package-data]
"contextstore" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
